Сделала блок "Отзывы"

--- a/prepros.config
+++ b/prepros.config
@@ -885,6 +885,17 @@
     },
     "files": [
       {
+        "file": "css/base.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          },
+          "compileImported": true
+        }
+      },
+      {
         "file": "css/normalize/normalize.scss",
         "config": {
           "compileImported": true
