промежуточная правка (созвон с наставником)

--- a/prepros.config
+++ b/prepros.config
@@ -902,6 +902,20 @@
         }
       },
       {
+        "file": "css/style.css",
+        "config": {
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            },
+            "minify-css": {
+              "enable": false
+            }
+          },
+          "autoCompile": true
+        }
+      },
+      {
         "file": "css/style.min.css",
         "config": {
           "tasks": {
