сверстала 3 секции, внесла правки после просмотра вебинара

--- a/prepros.config
+++ b/prepros.config
@@ -14,7 +14,7 @@
       "afterUpload": false
     },
     "sync": {
-      "enable": false,
+      "enable": true,
       "mouse": true,
       "keyboard": true,
       "form": true,
@@ -69,7 +69,21 @@
           "*.turf",
           "*.ts"
         ],
-        "exceptions": []
+        "exceptions": [
+          "scss/components/advantages.scss",
+          "scss/components/about.scss",
+          "scss/components/header.scss",
+          "scss/components/buttons.scss",
+          "scss/components/pagination.scss",
+          "scss/components/primary-menu.scss",
+          "scss/components/review.scss",
+          "scss/settings/base.scss",
+          "scss/settings/fonts.scss",
+          "scss/settings/mixins.scss",
+          "scss/settings/normalize.scss",
+          "scss/settings/vars.scss",
+          "scss/main.scss"
+        ]
       }
     },
     "uploader": {
@@ -896,6 +910,18 @@
         }
       },
       {
+        "file": "css/fonts.css",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "css/main.css",
+        "config": {
+          "autoCompile": true
+        }
+      },
+      {
         "file": "css/normalize/normalize.scss",
         "config": {
           "compileImported": true
@@ -934,6 +960,84 @@
             }
           },
           "sourceMap": true
+        }
+      },
+      {
+        "file": "scss/components/about.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/components/advantages.scss",
+        "config": {
+          "compileImported": true,
+          "sourceMap": true,
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
+        "file": "scss/components/buttons.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/components/header.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/components/pagination.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/components/primary-menu.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/components/review.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/settings/base.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/settings/fonts.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/settings/mixins.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/settings/normalize.scss",
+        "config": {
+          "compileImported": true
+        }
+      },
+      {
+        "file": "scss/settings/vars.scss",
+        "config": {
+          "compileImported": true
         }
       }
     ]
