--- a/prepros.config
+++ b/prepros.config
@@ -987,6 +987,17 @@
         }
       },
       {
+        "file": "scss/components/hamburger-menu.scss",
+        "config": {
+          "compileImported": true,
+          "tasks": {
+            "autoprefixer": {
+              "enable": false
+            }
+          }
+        }
+      },
+      {
         "file": "scss/components/header.scss",
         "config": {
           "compileImported": true
